--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "pandas>=2.2.3",
     "plotly>=6.0.0",
     "scipy>=1.15.2",
+    "seaborn>=0.13.2",
+    "statsmodels>=0.14.4",
 ]
 
 [dependency-groups]
